[gd_scene load_steps=41 format=2]

[ext_resource path="res://Image-assets/coins_animation.png" type="Texture" id=1]
[ext_resource path="res://Scripts/GameManager.gd" type="Script" id=2]
[ext_resource path="res://Fonts/BebasNeue-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Scenes/villageAvalonia.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scripts/cameraControl.gd" type="Script" id=5]
[ext_resource path="res://Image-assets/award.png" type="Texture" id=6]
[ext_resource path="res://Scenes/worldMap.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/achivements.tscn" type="PackedScene" id=8]
[ext_resource path="res://Image-assets/transition_mask.png" type="Texture" id=9]
[ext_resource path="res://Fonts/main-font.tres" type="DynamicFont" id=10]
[ext_resource path="res://Shaders/glow.shader" type="Shader" id=11]
[ext_resource path="res://Image-assets/ribbonVioletSplit.png" type="Texture" id=12]
[ext_resource path="res://Image-assets/charPanel-male.png" type="Texture" id=13]
[ext_resource path="res://Fonts/main_font.tres" type="DynamicFont" id=14]
[ext_resource path="res://Scenes/charPanel.tscn" type="PackedScene" id=15]
[ext_resource path="res://Shaders/transition.shader" type="Shader" id=16]
[ext_resource path="res://Image-assets/optionsBtn.png" type="Texture" id=17]
[ext_resource path="res://Scenes/ingameOptions.tscn" type="PackedScene" id=18]
[ext_resource path="res://Scenes/inventorySystem.tscn" type="PackedScene" id=19]
[ext_resource path="res://Shaders/grayscale.shader" type="Shader" id=20]
[ext_resource path="res://Scenes/castle.tscn" type="PackedScene" id=21]
[ext_resource path="res://Image-assets/battle.png" type="Texture" id=22]
[ext_resource path="res://Image-assets/close_button.png" type="Texture" id=23]

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 1, 0.133333, 0.133333, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 11 )
shader_param/radius = 5.0
shader_param/amount = 0.25

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 20 )
shader_param/grayscale = false

[sub_resource type="DynamicFontData" id=3]
font_path = "res://Fonts/BebasNeue-Regular.ttf"

[sub_resource type="DynamicFont" id=4]
size = 12
outline_size = 1
outline_color = Color( 0.0862745, 0.0352941, 0, 1 )
extra_spacing_char = 1
font_data = SubResource( 3 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.235294, 0.235294, 0.235294, 0.619608 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="DynamicFont" id=6]
size = 20
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=7]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 7 ]
}

[sub_resource type="StyleBoxEmpty" id=12]

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0.156863, 0.109804, 0.109804, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.35791, 0.282413, 0.282413, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="DynamicFontData" id=14]
font_path = "res://Fonts/BebasNeue-Regular.ttf"

[sub_resource type="DynamicFont" id=15]
size = 21
font_data = SubResource( 14 )

[sub_resource type="DynamicFontData" id=16]
font_path = "res://Fonts/BebasNeue-Regular.ttf"

[sub_resource type="DynamicFont" id=17]
size = 17
font_data = SubResource( 16 )

[sub_resource type="ShaderMaterial" id=8]
shader = ExtResource( 16 )
shader_param/cutoff = 0.0
shader_param/smooth_size = 0.478
shader_param/color = Color( 0.219608, 0.137255, 0.054902, 1 )
shader_param/mask = ExtResource( 9 )

[sub_resource type="Animation" id=9]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath(".:material:shader_param/cutoff")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}

[sub_resource type="Animation" id=10]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath(".:material:shader_param/cutoff")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}

[node name="GameManager" type="Node"]
script = ExtResource( 2 )
__meta__ = {
"_edit_horizontal_guides_": [ -865.344, 1294.66 ],
"_edit_vertical_guides_": [ -2372.1, 1463.24 ]
}

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 217, 384 )
current = true
zoom = Vector2( 2, 2 )
limit_left = -2368
limit_top = -865
limit_right = 1463
limit_bottom = 1295
limit_smoothed = true
smoothing_enabled = true
smoothing_speed = 30.0
drag_margin_left = 0.0
drag_margin_top = 0.0
drag_margin_right = 0.0
drag_margin_bottom = 0.0
editor_draw_limits = true
editor_draw_drag_margin = true
script = ExtResource( 5 )
pan_smooth = -7.0

[node name="worldMap" parent="." instance=ExtResource( 7 )]
visible = false
z_index = 1

[node name="villageAvalonia" parent="." instance=ExtResource( 4 )]

[node name="UiCanvas" type="CanvasLayer" parent="."]
layer = 0

[node name="battleNotification" type="TextureButton" parent="UiCanvas"]
visible = false
margin_left = 38.778
margin_top = 126.361
margin_right = 78.778
margin_bottom = 166.361
texture_normal = ExtResource( 22 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bubble" type="Panel" parent="UiCanvas/battleNotification"]
margin_left = 28.3852
margin_top = 1.08069
margin_right = 39.3852
margin_bottom = 12.0807
custom_styles/panel = SubResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="UiCanvas/battleNotification/bubble"]
margin_left = 1.35598
margin_top = -0.581131
margin_right = 9.35598
margin_bottom = 13.4189
text = "1"

[node name="achivementsButton" type="TextureButton" parent="UiCanvas"]
material = SubResource( 1 )
margin_left = 383.059
margin_top = 293.487
margin_right = 433.059
margin_bottom = 343.487
texture_normal = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ribbonViolet" type="Sprite" parent="UiCanvas/achivementsButton"]
position = Vector2( -50.3639, 22.4264 )
scale = Vector2( 1.40387, 0.863468 )
texture = ExtResource( 12 )

[node name="achievementsLabel" type="Label" parent="UiCanvas/achivementsButton"]
margin_left = -78.9583
margin_top = 11.216
margin_right = 4.04166
margin_bottom = 25.216
custom_fonts/font = ExtResource( 10 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "ACHIEVEMENTS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="inventoryButton" type="TextureButton" parent="UiCanvas"]
material = SubResource( 1 )
margin_left = 383.059
margin_top = 358.487
margin_right = 433.059
margin_bottom = 408.487
texture_normal = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ribbonViolet" type="Sprite" parent="UiCanvas/inventoryButton"]
modulate = Color( 0.929412, 0.286275, 0.239216, 1 )
position = Vector2( -50.3639, 22.4264 )
scale = Vector2( 1.40387, 0.863468 )
texture = ExtResource( 12 )

[node name="inventoryLabel" type="Label" parent="UiCanvas/inventoryButton"]
margin_left = -79.9583
margin_top = 11.216
margin_right = 3.04166
margin_bottom = 25.216
custom_fonts/font = ExtResource( 10 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "INVENTORY"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="buildings" type="TextureButton" parent="UiCanvas"]
material = SubResource( 2 )
margin_left = 383.059
margin_top = 427.487
margin_right = 433.059
margin_bottom = 477.487
texture_normal = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="buildingsLabel" type="Label" parent="UiCanvas/buildings"]
margin_left = 0.535431
margin_top = 18.4753
margin_right = 48.5354
margin_bottom = 33.4753
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Buildings"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="worldMapBtn" type="TextureButton" parent="UiCanvas"]
material = SubResource( 1 )
margin_left = 383.059
margin_top = 231.487
margin_right = 433.059
margin_bottom = 281.487
rect_pivot_offset = Vector2( -165.896, 52.8149 )
texture_normal = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ribbonViolet" type="Sprite" parent="UiCanvas/worldMapBtn"]
modulate = Color( 0.117926, 0.433594, 0.0728302, 1 )
position = Vector2( -50.3639, 22.4264 )
scale = Vector2( 1.40387, 0.863468 )
texture = ExtResource( 12 )

[node name="worldMapLabel" type="Label" parent="UiCanvas/worldMapBtn"]
margin_left = -78.9583
margin_top = 11.216
margin_right = 4.04166
margin_bottom = 25.216
custom_fonts/font = ExtResource( 10 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "WORLD  MAP"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="charPanelBtn" type="TextureButton" parent="UiCanvas"]
margin_left = 6.63414
margin_top = 9.2878
margin_right = 116.634
margin_bottom = 119.288
texture_normal = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="charNameBkgr" type="Panel" parent="UiCanvas/charPanelBtn"]
margin_left = 118.0
margin_top = 14.0
margin_right = 241.0
margin_bottom = 42.0
rect_pivot_offset = Vector2( 80.8884, 34.225 )
custom_styles/panel = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="charName" type="Label" parent="UiCanvas/charPanelBtn/charNameBkgr"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 6.0
margin_top = -8.0
margin_right = 118.0
margin_bottom = 9.0
custom_fonts/font = ExtResource( 14 )
text = "Sir Allemon"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="moneyBkgr" type="Panel" parent="UiCanvas"]
margin_left = 124.84
margin_top = 78.6147
margin_right = 221.84
margin_bottom = 106.615
rect_pivot_offset = Vector2( 80.8884, 34.225 )
custom_styles/panel = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="moneyLabel" type="Label" parent="UiCanvas"]
margin_left = 150.117
margin_top = 80.6147
margin_right = 219.117
margin_bottom = 104.615
rect_pivot_offset = Vector2( 55.611, 32.225 )
custom_fonts/font = SubResource( 6 )
text = "[money]"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="UiCanvas/moneyLabel"]
position = Vector2( -13.8363, 11.6833 )
scale = Vector2( 1.30331, 1.30331 )
texture = ExtResource( 1 )
vframes = 3
hframes = 8
frame = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="UiCanvas/moneyLabel/Sprite"]
autoplay = "coin-flip"
anims/coin-flip = SubResource( 7 )

[node name="options" type="TextureButton" parent="UiCanvas"]
margin_left = 373.229
margin_top = 23.3268
margin_right = 413.229
margin_bottom = 63.3268
texture_normal = ExtResource( 17 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="achivements" parent="UiCanvas" instance=ExtResource( 8 )]
visible = false
margin_left = 16.9591
margin_top = 14.6916
margin_right = 394.959
margin_bottom = 643.691

[node name="charPanel" parent="UiCanvas" instance=ExtResource( 15 )]
visible = false
margin_left = 25.6597
margin_top = 163.88
margin_right = 405.66
margin_bottom = 433.88

[node name="ingameOptions" parent="UiCanvas" instance=ExtResource( 18 )]
visible = false

[node name="inventorySystem" parent="UiCanvas" instance=ExtResource( 19 )]
visible = false
margin_top = 128.0
margin_bottom = -246.0

[node name="castle" parent="UiCanvas" instance=ExtResource( 21 )]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -216.0
margin_top = -384.0
margin_right = 216.0
margin_bottom = 384.0

[node name="battleDetails" type="Panel" parent="UiCanvas"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -189.0
margin_top = -145.0
margin_right = 190.0
margin_bottom = -23.0
custom_styles/panel = SubResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bkgr" type="Panel" parent="UiCanvas/battleDetails"]
modulate = Color( 1, 1, 1, 0.92549 )
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="battle" type="TextureRect" parent="UiCanvas/battleDetails"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -176.568
margin_top = 10.6537
margin_right = -136.568
margin_bottom = 50.6537
rect_min_size = Vector2( 40, 40 )
texture = ExtResource( 22 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="headerLabel" type="Label" parent="UiCanvas/battleDetails/battle"]
margin_left = 45.4228
margin_top = 6.4043
margin_right = 179.423
margin_bottom = 32.4043
custom_fonts/font = SubResource( 15 )
text = "Battle Information"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="info" type="Label" parent="UiCanvas/battleDetails"]
margin_left = 16.5992
margin_top = 89.5908
margin_right = 108.599
margin_bottom = 103.591
text = "[battle details]"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="timeInfo" type="Label" parent="UiCanvas/battleDetails"]
margin_left = 16.5992
margin_top = 59.944
margin_right = 134.599
margin_bottom = 73.944
custom_fonts/font = SubResource( 17 )
text = "Time until battle : "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="close_battleDetails" type="TextureButton" parent="UiCanvas/battleDetails"]
margin_left = 325.714
margin_top = 7.18484
margin_right = 372.714
margin_bottom = 49.1848
texture_normal = ExtResource( 23 )

[node name="ColorRect" type="ColorRect" parent="UiCanvas"]
visible = false
material = SubResource( 8 )
margin_left = -148.0
margin_top = -263.0
margin_right = 583.0
margin_bottom = 1033.0
color = Color( 0.760784, 0.278431, 0.278431, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="UiCanvas/ColorRect"]
anims/fade-in = SubResource( 9 )
anims/fade-out = SubResource( 10 )

[node name="Tween" type="Tween" parent="."]

[node name="updateUi" type="Timer" parent="."]
wait_time = 0.001
autostart = true

[node name="dayCounter" type="Timer" parent="."]
wait_time = 300.0
autostart = true

[node name="battleTimers" type="Node" parent="."]

[node name="battleTimer1" type="Timer" parent="battleTimers"]
[connection signal="pressed" from="UiCanvas/battleNotification" to="." method="_on_battleNotification_pressed"]
[connection signal="pressed" from="UiCanvas/achivementsButton" to="." method="_on_achivementsButton_pressed"]
[connection signal="pressed" from="UiCanvas/inventoryButton" to="." method="_on_inventoryButton_pressed"]
[connection signal="pressed" from="UiCanvas/buildings" to="." method="_on_buildings_pressed"]
[connection signal="pressed" from="UiCanvas/worldMapBtn" to="." method="_on_worldMapBtn_pressed"]
[connection signal="pressed" from="UiCanvas/charPanelBtn" to="." method="_on_charPanelBtn_pressed"]
[connection signal="pressed" from="UiCanvas/options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="UiCanvas/battleDetails/close_battleDetails" to="." method="_on_close_battleDetails_pressed"]
[connection signal="timeout" from="updateUi" to="." method="_on_updateUi_timeout"]
[connection signal="timeout" from="dayCounter" to="." method="_on_dayCounter_timeout"]

[editable path="worldMap"]

[editable path="villageAvalonia"]

[editable path="villageAvalonia/UiCanvas/bakery"]

[editable path="villageAvalonia/UiCanvas/store"]

[editable path="UiCanvas/achivements"]

[editable path="UiCanvas/charPanel"]
